[project]
name = "twitter-notes-monitor"
version = "0.2.0"
description = "Twitter Community Notes 监控系统（curl_cffi 直连版，无需 RPC/Playwright）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.6.0",
    "toml>=0.10.2",
    "httpx>=0.25.0",
    "curl-cffi>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "exejs>=0.0.3",
    "m3u8>=0.9.0",
    "webvtt-py>=0.5.0",
    "schedule>=1.2.0",
    "pydantic>=2.0.0",
    "tenacity>=9.1.4",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]
